--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My CyberSpace</title>
+    <title>Weisonx Home</title>
     <link rel="stylesheet" href="style.css">
     <!-- 字体：Orbitron (科幻标题) 和 Inter (正文) -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
     <div class="overlay">
         <!-- 头部导航 -->
         <nav class="glass-nav">
-            <div class="logo">NEXUS<span>.IO</span></div>
+            <div class="logo">Weisonx<span>.IO</span></div>
             <ul class="social-links">
                 <li><a href="https://github.com/weisonx" target="_blank"><i class="fab fa-github"></i></a></li>
                 <li><a href=""><i class="fas fa-envelope"></i></a></li>
