增加浅色主题

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh-CN" data-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weisonx Home</title>
+    <title>Weisonx | Developer Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <!-- 字体：Orbitron (科幻标题) 和 Inter (正文) -->
+    <!-- 字体：Orbitron (科幻/技术) 和 Inter (阅读) -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
     <!-- 图标库 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -19,10 +19,16 @@
         <!-- 头部导航 -->
         <nav class="glass-nav">
             <div class="logo">Weisonx<span>.IO</span></div>
-            <ul class="social-links">
-                <li><a href="https://github.com/weisonx" target="_blank"><i class="fab fa-github"></i></a></li>
-                <li><a href=""><i class="fas fa-envelope"></i></a></li>
-            </ul>
+            <div class="nav-actions">
+                <!-- 主题切换按钮 -->
+                <button id="theme-toggle" aria-label="Toggle Theme">
+                    <i class="fas fa-sun" id="theme-icon"></i>
+                </button>
+                <ul class="social-links">
+                    <li><a href="https://github.com/weisonx" target="_blank"><i class="fab fa-github"></i></a></li>
+                    <li><a href="mailto:your-email@example.com"><i class="fas fa-envelope"></i></a></li>
+                </ul>
+            </div>
         </nav>
 
         <!-- 核心区域 -->
@@ -33,11 +39,11 @@
                     <img id="avatar" src="https://github.com/github.png" alt="Avatar">
                     <div class="status-ring"></div>
                 </div>
-                <h1 id="username">User Name</h1>
+                <h1 id="username">Loading...</h1>
                 <div class="typing-container">
                     <span id="typing-text"></span><span class="cursor">|</span>
                 </div>
-                <p class="bio" id="bio">Loading bio data from GitHub network...</p>
+                <p class="bio" id="bio">Connecting to GitHub Satellite...</p>
             </section>
 
             <!-- 统计仪表盘 -->
@@ -49,7 +55,10 @@
             <section class="projects-section">
                 <h2 class="section-title"><i class="fas fa-code-branch"></i> Top Repositories</h2>
                 <div class="projects-grid" id="repos-container">
-                    <!-- 骨架屏 Loading 效果 -->
+                    <!-- 骨架屏 Loading 效果 (6个) -->
+                    <div class="card skeleton"></div>
+                    <div class="card skeleton"></div>
+                    <div class="card skeleton"></div>
                     <div class="card skeleton"></div>
                     <div class="card skeleton"></div>
                     <div class="card skeleton"></div>
