--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <i class="fas fa-sun" id="theme-icon"></i>
             </button>
             <a href="https://github.com/weisonx" target="_blank" class="nav-link"><i class="fab fa-github"></i></a>
-            <a href="mailto:your-email@example.com" class="nav-link"><i class="fas fa-envelope"></i></a>
+            <a href="" class="nav-link"><i class="fas fa-envelope"></i></a>
         </div>
     </nav>
 
